// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthVault - mint mints osTokens to the receiver 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 174835,
}
`;

exports[`EthVault - mint updates position accumulated fee 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 119952,
}
`;
